// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetectionPanel > renders clean verdict state 1`] = `
<div>
  <div
    style="display: flex; flex-direction: column; gap: 18px;"
  >
    <section
      aria-live="polite"
      style="border: 1px solid rgb(42, 74, 54); background: rgb(20, 20, 20); padding: 18px 20px;"
    >
      <div
        class="v3-eyebrow"
      >
        Detection
      </div>
      <div
        style="display: grid; grid-template-columns: minmax(0, 1fr) auto; gap: 18px; align-items: end; margin-top: 10px;"
      >
        <div
          style="min-width: 0;"
        >
          <h2
            style="margin: 0px; font-size: 24px; font-weight: 700; letter-spacing: 0; color: rgb(122, 176, 136); line-height: 1.05;"
          >
            clean
          </h2>
          <p
            style="margin-top: 8px; max-width: 760px; font-size: 13.5px; line-height: 1.6; color: rgb(138, 135, 128);"
          >
            Rationale for clean
          </p>
        </div>
        <span
          style="display: inline-flex; align-items: center; background: rgb(19, 35, 26); color: rgb(122, 176, 136); border: 1px solid rgb(42, 74, 54); padding: 3px 8px; font-family: "JetBrains Mono", monospace; font-size: 10px; font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; border-radius: 0; white-space: nowrap;"
        >
          0
           finding
          s
        </span>
      </div>
    </section>
    <div
      style="padding: 56px 24px; text-align: center; border: 1px dashed rgb(58, 58, 58); border-radius: 0; background: rgb(20, 20, 20); display: flex; flex-direction: column; align-items: center; gap: 12px;"
    >
      <div
        style="display: inline-flex; align-items: center; gap: 10px; font-family: "JetBrains Mono", monospace; font-size: 10px; font-weight: 500; letter-spacing: 0.18em; text-transform: uppercase; color: rgb(138, 135, 128);"
      >
        <span>
          Findings
        </span>
      </div>
      <div
        style="font-family: "Manrope", sans-serif; font-size: 32px; font-weight: 700; color: rgb(244, 241, 234); letter-spacing: 0; line-height: 1;"
      >
        No fired rules
      </div>
      <div
        style="font-size: 13px; color: rgb(138, 135, 128); max-width: 380px; line-height: 1.6;"
      >
        No rules fired. Verdict: clean.
      </div>
    </div>
  </div>
</div>
`;

exports[`DetectionPanel > renders clean_with_notes verdict state 1`] = `
<div>
  <div
    style="display: flex; flex-direction: column; gap: 18px;"
  >
    <section
      aria-live="polite"
      style="border: 1px solid rgb(42, 74, 54); background: rgb(20, 20, 20); padding: 18px 20px;"
    >
      <div
        class="v3-eyebrow"
      >
        Detection
      </div>
      <div
        style="display: grid; grid-template-columns: minmax(0, 1fr) auto; gap: 18px; align-items: end; margin-top: 10px;"
      >
        <div
          style="min-width: 0;"
        >
          <h2
            style="margin: 0px; font-size: 24px; font-weight: 700; letter-spacing: 0; color: rgb(122, 176, 136); line-height: 1.05;"
          >
            clean with notes
          </h2>
          <p
            style="margin-top: 8px; max-width: 760px; font-size: 13.5px; line-height: 1.6; color: rgb(138, 135, 128);"
          >
            Rationale for clean_with_notes
          </p>
        </div>
        <span
          style="display: inline-flex; align-items: center; background: rgb(19, 35, 26); color: rgb(122, 176, 136); border: 1px solid rgb(42, 74, 54); padding: 3px 8px; font-family: "JetBrains Mono", monospace; font-size: 10px; font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; border-radius: 0; white-space: nowrap;"
        >
          1
           finding
        </span>
      </div>
    </section>
    <section
      style="display: flex; flex-direction: column; gap: 14px;"
    >
      <article
        class="space-y-4 rounded-none border border-line bg-panel px-5 py-5"
      >
        <div
          class="flex flex-wrap items-start justify-between gap-3"
        >
          <div
            class="space-y-2"
          >
            <div
              class="micro-label"
            >
              extrace.a1.credential_read_then_network
            </div>
            <h3
              class="text-xl font-semibold text-ink"
            >
              Synthetic detection finding
            </h3>
          </div>
          <div
            class="flex flex-wrap gap-2 text-xs font-medium"
          >
            <span
              class="rounded-none px-3 py-1 bg-warning/15 text-warning"
            >
              Severity: 
              Medium
            </span>
            <span
              class="rounded-none bg-panelAlt px-3 py-1 text-inkSoft"
            >
              Confidence: 
              Medium
            </span>
            <span
              class="rounded-none bg-panelAlt px-3 py-1 text-inkSoft"
            >
              A1
            </span>
          </div>
        </div>
        <p
          class="text-sm leading-7 text-mute"
        >
          Synthetic description
        </p>
        <div
          class="flex flex-wrap gap-2 text-xs text-inkSoft"
        >
          <span
            class="rounded-none border border-line px-3 py-1"
          >
            attack.T1555
          </span>
        </div>
        <div
          class="rounded-none border border-lineSoft bg-panelAlt px-4 py-3 text-sm text-mute"
        >
          Review extension behavior.
        </div>
        <div
          class="flex items-center justify-between gap-3"
        >
          <div
            class="text-sm text-mute"
          >
            Read file
          </div>
          <button
            class="ghost-button"
            type="button"
          >
            1
             evidence
          </button>
        </div>
      </article>
    </section>
  </div>
</div>
`;

exports[`DetectionPanel > renders inconclusive verdict state 1`] = `
<div>
  <div
    style="display: flex; flex-direction: column; gap: 18px;"
  >
    <section
      aria-live="polite"
      style="border: 1px solid rgb(58, 58, 58); background: rgb(28, 28, 28); padding: 18px 20px;"
    >
      <div
        class="v3-eyebrow"
      >
        Detection
      </div>
      <div
        style="display: grid; grid-template-columns: minmax(0, 1fr) auto; gap: 18px; align-items: end; margin-top: 10px;"
      >
        <div
          style="min-width: 0;"
        >
          <h2
            style="margin: 0px; font-size: 30px; font-weight: 700; letter-spacing: 0; color: rgb(207, 203, 194); line-height: 1.05;"
          >
            inconclusive
          </h2>
          <p
            style="margin-top: 8px; max-width: 760px; font-size: 13.5px; line-height: 1.6; color: rgb(138, 135, 128);"
          >
            Rationale for inconclusive
          </p>
        </div>
        <span
          style="display: inline-flex; align-items: center; background: rgb(28, 28, 28); color: rgb(207, 203, 194); border: 1px solid rgb(58, 58, 58); padding: 3px 8px; font-family: "JetBrains Mono", monospace; font-size: 10px; font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; border-radius: 0; white-space: nowrap;"
        >
          1
           finding
        </span>
      </div>
    </section>
    <section
      style="display: flex; flex-direction: column; gap: 14px;"
    >
      <article
        class="space-y-4 rounded-none border border-line bg-panel px-5 py-5"
      >
        <div
          class="flex flex-wrap items-start justify-between gap-3"
        >
          <div
            class="space-y-2"
          >
            <div
              class="micro-label"
            >
              extrace.a1.credential_read_then_network
            </div>
            <h3
              class="text-xl font-semibold text-ink"
            >
              Synthetic detection finding
            </h3>
          </div>
          <div
            class="flex flex-wrap gap-2 text-xs font-medium"
          >
            <span
              class="rounded-none px-3 py-1 bg-warning/15 text-warning"
            >
              Severity: 
              Medium
            </span>
            <span
              class="rounded-none bg-panelAlt px-3 py-1 text-inkSoft"
            >
              Confidence: 
              Medium
            </span>
            <span
              class="rounded-none bg-panelAlt px-3 py-1 text-inkSoft"
            >
              A1
            </span>
          </div>
        </div>
        <p
          class="text-sm leading-7 text-mute"
        >
          Synthetic description
        </p>
        <div
          class="flex flex-wrap gap-2 text-xs text-inkSoft"
        >
          <span
            class="rounded-none border border-line px-3 py-1"
          >
            attack.T1555
          </span>
        </div>
        <div
          class="rounded-none border border-lineSoft bg-panelAlt px-4 py-3 text-sm text-mute"
        >
          Review extension behavior.
        </div>
        <div
          class="flex items-center justify-between gap-3"
        >
          <div
            class="text-sm text-mute"
          >
            Read file
          </div>
          <button
            class="ghost-button"
            type="button"
          >
            1
             evidence
          </button>
        </div>
      </article>
    </section>
  </div>
</div>
`;

exports[`DetectionPanel > renders malicious verdict state 1`] = `
<div>
  <div
    style="display: flex; flex-direction: column; gap: 18px;"
  >
    <section
      aria-live="polite"
      style="border: 1px solid rgb(255, 92, 66); background: rgb(42, 22, 18); padding: 18px 20px;"
    >
      <div
        class="v3-eyebrow"
      >
        Detection
      </div>
      <div
        style="display: grid; grid-template-columns: minmax(0, 1fr) auto; gap: 18px; align-items: end; margin-top: 10px;"
      >
        <div
          style="min-width: 0;"
        >
          <h2
            style="margin: 0px; font-size: 30px; font-weight: 700; letter-spacing: 0; color: rgb(255, 92, 66); line-height: 1.05;"
          >
            malicious
          </h2>
          <p
            style="margin-top: 8px; max-width: 760px; font-size: 13.5px; line-height: 1.6; color: rgb(138, 135, 128);"
          >
            Rationale for malicious
          </p>
        </div>
        <span
          style="display: inline-flex; align-items: center; background: rgb(255, 92, 66); color: rgb(10, 10, 10); border: 1px solid rgb(255, 92, 66); padding: 3px 8px; font-family: "JetBrains Mono", monospace; font-size: 10px; font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; border-radius: 0; white-space: nowrap;"
        >
          1
           finding
        </span>
      </div>
    </section>
    <section
      style="display: flex; flex-direction: column; gap: 14px;"
    >
      <article
        class="space-y-4 rounded-none border border-line bg-panel px-5 py-5"
      >
        <div
          class="flex flex-wrap items-start justify-between gap-3"
        >
          <div
            class="space-y-2"
          >
            <div
              class="micro-label"
            >
              extrace.a1.credential_read_then_network
            </div>
            <h3
              class="text-xl font-semibold text-ink"
            >
              Synthetic detection finding
            </h3>
          </div>
          <div
            class="flex flex-wrap gap-2 text-xs font-medium"
          >
            <span
              class="rounded-none px-3 py-1 bg-danger/15 text-danger"
            >
              Severity: 
              Critical
            </span>
            <span
              class="rounded-none bg-panelAlt px-3 py-1 text-inkSoft"
            >
              Confidence: 
              High
            </span>
            <span
              class="rounded-none bg-panelAlt px-3 py-1 text-inkSoft"
            >
              A1
            </span>
          </div>
        </div>
        <p
          class="text-sm leading-7 text-mute"
        >
          Synthetic description
        </p>
        <div
          class="flex flex-wrap gap-2 text-xs text-inkSoft"
        >
          <span
            class="rounded-none border border-line px-3 py-1"
          >
            attack.T1555
          </span>
        </div>
        <div
          class="rounded-none border border-lineSoft bg-panelAlt px-4 py-3 text-sm text-mute"
        >
          Review extension behavior.
        </div>
        <div
          class="flex items-center justify-between gap-3"
        >
          <div
            class="text-sm text-mute"
          >
            Read file
          </div>
          <button
            class="ghost-button"
            type="button"
          >
            1
             evidence
          </button>
        </div>
      </article>
    </section>
  </div>
</div>
`;

exports[`DetectionPanel > renders suspicious verdict state 1`] = `
<div>
  <div
    style="display: flex; flex-direction: column; gap: 18px;"
  >
    <section
      aria-live="polite"
      style="border: 1px solid rgb(92, 74, 34); background: rgb(42, 32, 15); padding: 18px 20px;"
    >
      <div
        class="v3-eyebrow"
      >
        Detection
      </div>
      <div
        style="display: grid; grid-template-columns: minmax(0, 1fr) auto; gap: 18px; align-items: end; margin-top: 10px;"
      >
        <div
          style="min-width: 0;"
        >
          <h2
            style="margin: 0px; font-size: 30px; font-weight: 700; letter-spacing: 0; color: rgb(212, 168, 90); line-height: 1.05;"
          >
            suspicious
          </h2>
          <p
            style="margin-top: 8px; max-width: 760px; font-size: 13.5px; line-height: 1.6; color: rgb(138, 135, 128);"
          >
            Rationale for suspicious
          </p>
        </div>
        <span
          style="display: inline-flex; align-items: center; background: rgb(42, 32, 15); color: rgb(212, 168, 90); border: 1px solid rgb(92, 74, 34); padding: 3px 8px; font-family: "JetBrains Mono", monospace; font-size: 10px; font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; border-radius: 0; white-space: nowrap;"
        >
          1
           finding
        </span>
      </div>
    </section>
    <section
      style="display: flex; flex-direction: column; gap: 14px;"
    >
      <article
        class="space-y-4 rounded-none border border-line bg-panel px-5 py-5"
      >
        <div
          class="flex flex-wrap items-start justify-between gap-3"
        >
          <div
            class="space-y-2"
          >
            <div
              class="micro-label"
            >
              extrace.a1.credential_read_then_network
            </div>
            <h3
              class="text-xl font-semibold text-ink"
            >
              Synthetic detection finding
            </h3>
          </div>
          <div
            class="flex flex-wrap gap-2 text-xs font-medium"
          >
            <span
              class="rounded-none px-3 py-1 bg-warning/15 text-warning"
            >
              Severity: 
              Medium
            </span>
            <span
              class="rounded-none bg-panelAlt px-3 py-1 text-inkSoft"
            >
              Confidence: 
              Medium
            </span>
            <span
              class="rounded-none bg-panelAlt px-3 py-1 text-inkSoft"
            >
              A1
            </span>
          </div>
        </div>
        <p
          class="text-sm leading-7 text-mute"
        >
          Synthetic description
        </p>
        <div
          class="flex flex-wrap gap-2 text-xs text-inkSoft"
        >
          <span
            class="rounded-none border border-line px-3 py-1"
          >
            attack.T1555
          </span>
        </div>
        <div
          class="rounded-none border border-lineSoft bg-panelAlt px-4 py-3 text-sm text-mute"
        >
          Review extension behavior.
        </div>
        <div
          class="flex items-center justify-between gap-3"
        >
          <div
            class="text-sm text-mute"
          >
            Read file
          </div>
          <button
            class="ghost-button"
            type="button"
          >
            1
             evidence
          </button>
        </div>
      </article>
    </section>
  </div>
</div>
`;
